--- a/front/src/main/webapp/principal.html
+++ b/front/src/main/webapp/principal.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Red social</title>
+    <link rel="stylesheet" type="text/css" href="css/home.css">
     <script src="util/js/axioslib.js"></script>
     <script src="util/js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript"	src='js/principal.js' defer></script>
@@ -18,6 +19,23 @@
 <header>
     <h1>Portal de Inicio</h1>
 </header>
+<div class="form_div">
 
+</div>
+<main>
+    <div id="login_form1" class="form_class">
+        <div class="form_div">
+            <label id="lblusuario">Bienvenido: </label>
+            <br>
+            <label id="lblcorreo">Correo: </label>
+            <br>
+            <br>
+            <button class="submit_class" onclick="eliminarcuenta()">Eliminar Cuenta</button>
+        </div>
+
+    </div>
+    <br>
+
+</main>
 </body>
 </html>
